--- a/app/elements/task/task-detail.html
+++ b/app/elements/task/task-detail.html
@@ -30,12 +30,10 @@
 						<dd>{{task.description}}</dd>
 					</dl>
 				</paper-material>
-
-				<paper-material class="card grid-element">
-					<skill-polygon id="skillPolygon" skills="{{task.skillWeights}}"></skill-polygon>
-				</paper-material>
+				<!--<paper-material class="card grid-element">-->
+					<!--<skill-polygon id="skillPolygon" skills="{{task.SkillWeights}}"></skill-polygon>-->
+				<!--</paper-material>-->
 			</div>
-
 			<paper-material	class="card grid-row">
 				<h4>Instructions</h4>
 				<render-markdown markdown="{{task.instructions}}"></render-markdown>
