--- a/app/elements/challenge/challenge-detail.html
+++ b/app/elements/challenge/challenge-detail.html
@@ -44,20 +44,20 @@
 		<div class="grid vertical layout mainContent">
 			<div class="horizontal layout">
 				<paper-material class="card grid-element" elevation="1">
-					<h1>{{challenge.Name}}</h1>
+					<h1>{{challenge.name}}</h1>
 					<dl class="dl-horizontal">
 						<dt>Duration</dt>
 						<dd>{{duration}}</dd>
 						<dt>Description</dt>
-						<dd>{{challenge.Description}}</dd>
+						<dd>{{challenge.description}}</dd>
 						<dt>Instructions</dt>
-						<dd>{{challenge.Instructions}}</dd>
+						<dd>{{challenge.instructions}}</dd>
 					</dl>
 				</paper-material>
-
-				<paper-material class="card grid-element">
-					<skill-polygon id="skillPolygon" skills="{{mockedSkills}}"></skill-polygon>
-				</paper-material>
+				<!--TODO: skills?-->
+				<!--<paper-material class="card grid-element">-->
+					<!--<skill-polygon id="skillPolygon" skills="{{mockedSkills}}"></skill-polygon>-->
+				<!--</paper-material>-->
 			</div>
 
 			<paper-material class="card grid-row">
@@ -133,10 +133,10 @@
 				}
 			},
 			_challengeChanged: function(){
-				this.$.skillPolygon.buildChart();
+//				this.$.skillPolygon.buildChart();
 				this.tasks = [];
-				for (var i = 0; i < this.challenge.Tasks.length; i++) {
-					this.$.taskService.getById(this.challenge.Tasks[i]);
+				for (var i = 0; i < this.challenge.tasks.length; i++) {
+					this.$.taskService.getById(this.challenge.tasks[i]);
 				}
 			},
 			_taskChanged: function(){
@@ -150,7 +150,7 @@
 				this.$.challengeService.getById(challengeKey);
 			},
 			computeDuration: function (challenge) {
-				return util.computeDuration(challenge.Duration);
+				return util.computeDuration(challenge.duration);
 			},
 			computeIndex: function (index) {
 				return index + 1;
