Integrate with platform  * challenge creation  * challenge display   * task creation   * task display

--- a/app/elements/login/login-wizard/login-wizard.html
+++ b/app/elements/login/login-wizard/login-wizard.html
@@ -124,7 +124,7 @@ Polymer({
 		this.$.organizationRequest.url = util.build('/user/organization');
 		this.$.organizationRequest.generateRequest();
 	},
-	onOrganization: function(r) {
+	onOrganization: function() {
 		localStorage.organization = JSON.stringify(this.$.organizationRequest.lastResponse);
 		app.login();
 	},
