--- a/app/elements/code-editor/consoles/test-stats-console.html
+++ b/app/elements/code-editor/consoles/test-stats-console.html
@@ -89,6 +89,9 @@
 			loading: function(){
 				this.dataStyle = '';
 				this.stderr = '';
+				if(!this.tests){
+					return;
+				}
 				for(var i=0;i<this.tests.length;i++){
 					this.$$('#' + this.tests[i].Key).startLoading();
 				}
