--- a/app/elements/coduno-iron-ajax.html
+++ b/app/elements/coduno-iron-ajax.html
@@ -11,7 +11,8 @@
 		  headers="{{headers}}"
 		  url="{{url}}"
 			body="{{body}}"
-		  debounce-duration="{{debounceDuration}}">
+		  debounce-duration="{{debounceDuration}}"
+			with-credentials="true">
 		</iron-ajax>
 	</template>
 	<script>
