Move all elements in 3 new packages coder, company or common

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -16,10 +16,10 @@
 <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
 <!-- Error pages-->
-<link rel="import" href="error/error-page.html">
+<link rel="import" href="common/error/error-page.html">
 
 <!-- Routing -->
 <link rel="import" href="routing.html">
 
-<!-- TODO(victorbalan): investigate why this element cause the flickering -->
-<link rel="import" href="/elements/skill/skill-list.html">
+<!-- TODO(victorbalan): investigate why this element causes the flickering -->
+<link rel="import" href="/elements/common/skill/skill-list.html">
