--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -195,7 +195,7 @@
 					element.$.cookieService.addEventListener('cookie-error', function (e) {
 						util.error(e.detail);
 					});
-					element.refreshMenu(true);
+					element.refreshMenu(element.isLoggedIn);
 				});
 			},
 			startLoading: function(){
@@ -224,8 +224,8 @@
 			},
 			login: function() {
 				this.refreshMenu(true);
-				if (localStorage.company) {
-					return page.redirect('/candidates');
+				if (!!util.organization()) {
+					return page.redirect('/challenges');
 				}
 				page.redirect('/challenge');
 			},
@@ -235,7 +235,7 @@
 				page.redirect('/login');
 			},
 			refreshMenu: function(loggedIn) {
-				this.isCompany = !!localStorage.organization;
+				this.isCompany = !!util.organization();
 				this.isCoder = !this.isCompany;
 				this.isLoggedIn = loggedIn;
 			},
@@ -246,9 +246,11 @@
 				// TODO(@flowlo): This deliberately does not check whether
 				// challengeKey is meaningful or even present, because if
 				// it is not, the XHR will fail and redirect to login.
-				this.$.resultRequest.url = util.build('/results');
-				this.$.resultRequest.body = localStorage.getItem('challenge');
-				this.$.resultRequest.generateRequest();
+				if (!!localStorage.getItem('challenge')) {
+					this.$.resultRequest.url = util.build('/results');
+					this.$.resultRequest.body = localStorage.getItem('challenge');
+					this.$.resultRequest.generateRequest();
+				}
 			},
 			onChallengeResponse: function(r) {
 				var challenge = r.detail.response;
