--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -9,7 +9,7 @@ window.addEventListener('WebComponentsReady', function() {
 		if (!localStorage.authorization){
 			page('/login');
 		}else if (util.organization()) {
-			page('/candidates');
+			page('/challenges');
 		} else {
 			page('/challenge');
 		}
@@ -105,6 +105,7 @@ window.addEventListener('WebComponentsReady', function() {
 
 	page('/login', function(ctx) {
 		app.route = 'login';
+		app.isLoggedIn = false;
 		Polymer.Base.importHref('/elements/common/login/login-wizard/login-wizard.html', function(){
 			if(!ctx.querystring){
 				return;
