--- a/app/elements/common/markdown/render-markdown.html
+++ b/app/elements/common/markdown/render-markdown.html
@@ -27,7 +27,8 @@
 				marked.setOptions({
 					highlight: function (code) {
 						return hljs.highlightAuto(code).value;
-					}
+					},
+					breaks: true
 				});
 			},
 			_updateChanges: function(){
