--- a/app/elements/coder/code-editor/consoles/test-stats-element.html
+++ b/app/elements/coder/code-editor/consoles/test-stats-element.html
@@ -66,7 +66,7 @@
 	 		this.$.spinner.active = false;
 		 },
 		 startLoading: function(){
-			 this.divClass = 'circle gray';
+			 this.divClass = 'circle';
 			 this.$.spinner.active = true;
 		 }
 	 });
